recognize YouTube resources and embed a player

--- a/src/webapp/pages/browseObjective.html
+++ b/src/webapp/pages/browseObjective.html
@@ -23,6 +23,11 @@
         <h2>Learning resources for this objective:</h2>
         <ul>
             <li data-ng-repeat="resource in resources">
+
+                <span data-ng-show="resource.embed">
+                <div ng-bind-html="toTrusted(resource.embed)"></div>
+                </span>
+
                 <a href="{{resource.url}}">
                     {{resource.url}}
                 </a>
