--- a/src/webapp/pages/browseObjective.html
+++ b/src/webapp/pages/browseObjective.html
@@ -29,8 +29,14 @@
                 </span>
 
                 <a href="{{resource.url}}">
-                    {{resource.url}}
+                    <span data-ng-show="resource.title">{{resource.title}}</span>
+                    <span data-ng-hide="resource.title">{{resource.url}}</span>
                 </a>
+                <div data-ng-show="resource.warning">
+                    <p class="edjective-warning">
+                    Warning: {{resource.warning}}
+                    </p>
+                </div>
                 <div data-ng-show="resource.notes">
                     ({{resource.notes}})
                 </div>
