--- a/src/webapp/pages/browseObjective.html
+++ b/src/webapp/pages/browseObjective.html
@@ -42,9 +42,19 @@
                 </div>
                 <div data-ng-show="resource.votes">
                     {{resource.votes}} votes
+                    <ul>
+                        <li data-ng-repeat="comment in resource.upvotes">
+                            {{comment.comment}}
+                        </li>
+                    </ul>
                 </div>
                 <div data-ng-show="resource.inappropriate_flags">
                     Flagged as inappropriate {{resource.inappropriate_flags}} times
+                    <ul>
+                        <li data-ng-repeat="comment in resource.flags">
+                            {{comment.comment}}
+                        </li>
+                    </ul>
                 </div>
                 <div>
                 <input type="button" value="Up-vote or flag resource..."
