better button styling

--- a/src/webapp/pages/browseObjective.html
+++ b/src/webapp/pages/browseObjective.html
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
                 <div>
-                <input type="button" value="Up-vote or flag resource..."
+                <input type="button" class="btn btn-default btn-mini" value="Up-vote or flag resource..."
                        data-ng-click="commentOnResource(resource.id)">
                 </div>
             </li>
@@ -65,6 +65,6 @@
     </div>
 
     <br />
-    <input type="button" value="Add a resource..." data-ng-click="submitResource(objective.id)">
+    <input type="button" class="btn btn-default" value="Add a resource..." data-ng-click="submitResource(objective.id)">
 
 </div>
