add comment with template name

--- a/src/webapp/pages/forVendors.html
+++ b/src/webapp/pages/forVendors.html
@@ -1,3 +1,4 @@
+<!-- forVendors -->
 <h2>Educational software vendors,</h2>
 
 <p>Your software is the key to making current school activities school
