--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,3 +1,4 @@
+<!-- front -->
 <ul class="huge">
     <li class="browse"><a href="#/browse">Browse</a></li>
     <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
