--- a/src/webapp/pages/straytext.html
+++ b/src/webapp/pages/straytext.html
@@ -1,3 +1,4 @@
+<!-- straytext -->
 <h4>Support for a course offering starts with a definition of the curriculum, made up
 of a series of learning objectives.</h4>
 
