--- a/src/webapp/pages/forVendors.html
+++ b/src/webapp/pages/forVendors.html
@@ -12,7 +12,7 @@ pervasive in family interactions.</p>
   <li>Specialty software which currently requires teachers to rekey
   or otherwise manipulate the educational materials can be much
   easier for users when they can reuse material from the repository.</li>
-  <li>Easy access to materials will incentivize experiments in new methods
+  <li>Easy access to materials will provide incentives for experiments in new methods
   or situations for learning.</li>
 </ul>
 
