ForTeachers: link to main site, reindent

--- a/src/webapp/pages/forTeachers.html
+++ b/src/webapp/pages/forTeachers.html
@@ -1,20 +1,24 @@
 <!-- forTeachers -->
-<h2>Teachers,</h2>
+<div data-ng-controller="ForTeachersCtrl">
+    <h2>Teachers,</h2>
 
-<p>In order for you and your student families to make best use of
-the system, we need you to maintain a calendar showing the current
-learning objective(s) for your classes which participate in the
-project.  Easy to use software will make this quick, and in a short
-time you can lay out projected progress over the coming days or
-weeks and easily adjust it later.</p>
+    <p>In order for you and your student families to make best use of
+    the system, we need you to maintain a calendar showing the current
+    learning objective(s) for your classes which participate in the
+    project.  Easy to use software will make this quick, and in a short
+    time you can lay out projected progress over the coming days or
+    weeks and easily adjust it later.</p>
 
-<p>You and your student families will then be able to use different 
-software to access materials relevant to the current learning
-objectives.</p>
+    <p>You and your student families will then be able to use different
+    software to access materials relevant to the current learning
+    objectives.</p>
 
-<p>See the demo on the <a href="#/forParents">parents</a> page.</p>
+    <p>If you are teaching a course which is not yet defined in the
+    system, you and your colleagues can collaborate on defining it.</p>
 
-<p>If you are teaching a course which is not yet defined in the
-system, you and your colleagues can collaborate on defining it.</p>
-
-<p>You are also <a href="#/forAuthors">authors of materials</a>.</p>
+    <ul>
+        <li>Demo on the <a href="#/forParents">parents</a> page</li>
+        <li>Notes for <a href="#/forAuthors">authors of materials</a></li>
+        <li><a href="{{ webui }}">Teacher Dashboard and Reference Interface</a></li>
+    </ul>
+</div>
