Add permanent example which is created/updated by a script.

--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -5,7 +5,7 @@
 of materials when teachers maintain a calendar of learning objectives
 (i.e., indicate what objectives they are currently covering).</p>
 
-<p>For the demonstration, enter <strong>trawick@gmail.com</strong>
+<p>For the demonstration, enter <strong>ms.teacher@example.edu</strong>
 as the teacher e-mail address, then press Lookup, then select one
 of the classes which appears.</p>
 
