--- a/src/webapp/pages/browse.html
+++ b/src/webapp/pages/browse.html
@@ -14,10 +14,10 @@
         </select>
     </form>
 
-    <span data-ng-show="selectedCategory">
+    <div data-ng-show="selectedCategory">
     <p data-ng-hide="courses"><em>This course category does not contain any courses.</em></p>
-    </span>
-    <span data-ng-show="courses">
+    </div>
+    <div data-ng-show="courses">
     <p>Select course:</p>
 
     <form>
@@ -26,9 +26,9 @@
                 data-ng-click="updateSelectedCourse()">
         </select>
     </form>
-    </span>
+    </div>
 
-    <span data-ng-show="objectives">
+    <div data-ng-show="objectives">
     <ul class="objective-list">
         <li data-ng-repeat="objective in objectives">
             <a href="#/browse/{{objective.id}}">
@@ -37,6 +37,6 @@
             <span class="objective-list-entry-description">{{objective.description}}</span>
         </li>
     </ul>
-    </span>
+    </div>
     </div>
 </div>
