a little Bootstrap tweak

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -12,7 +12,7 @@
   <script src="js/controllers.js"></script>
 </head>
 <body>
-
+<div class="container">
   <div id="folder-image">
     <a href="#/"><img src="images/edjectives-folder-1-transparent-cropped-640px.png"
                       alt="image of folder of educational objectives from around the world"></a>
@@ -22,5 +22,6 @@
 
   
 
- </body>
+</div>
+</body>
 </html>
