various flashcard improvements (including questionable css changes)

--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -14,7 +14,8 @@ opening a web page or an app on your smartphone will retrieve current
 class activity for your children automatically.)</p>
 
   <div data-ng-controller="GetTeacherEmailCtrl" class="emailInput">
-    Teacher e-mail address: <input type="text" data-ng-model="teacherEmail" />
+    Teacher e-mail address: <input type="text"
+                                   data-ng-model="teacherEmail" />
     <button data-ng-click="update(teacherEmail)">Lookup</button>
   </div>
 
