--- a/src/webapp/pages/flashcards.html
+++ b/src/webapp/pages/flashcards.html
@@ -1,16 +1,22 @@
 <!-- browse -->
     <div class="flashcard-page" data-ng-controller="FlashcardCtrl">
 
-        <p>{{ flashcards[current][front_back] }}</p>
+        <div class="flashcard">
+            <div class="flashcard-status"><p>{{ deck_status }}</p></div>
 
-        <button type="button" class="btn btn-default btn-lg" data-ng-click="previousFlashcard()">
-            <span class="glyphicon glyphicon-hand-left"></span>
-        </button>
-        <button type="button" class="btn btn-default btn-lg" data-ng-click="flipFlashcard()">
-            <span class="glyphicon glyphicon-thumbs-up"></span>
-        </button>
-        <button type="button" class="btn btn-default btn-lg" data-ng-click="nextFlashcard()">
-            <span class="glyphicon glyphicon-hand-right"></span>
-        </button>
+            <div class="flashcard-text">{{ flashcards[current][front_back] }}</div>
+
+            <div class="flashcard-nav">
+                <button type="button" class="btn btn-default btn-lg" data-ng-click="previousFlashcard()">
+                    <span class="glyphicon glyphicon-hand-left"></span>
+                </button>
+                <button type="button" class="btn btn-default btn-lg" data-ng-click="flipFlashcard()">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                </button>
+                <button type="button" class="btn btn-default btn-lg" data-ng-click="nextFlashcard()">
+                    <span class="glyphicon glyphicon-hand-right"></span>
+            </button>
+            </div>
+        </div>
 
     </div>
