add myEdjectives app for end users

--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,5 +1,6 @@
 <!-- front -->
 <ul class="huge">
+    <li class="myEdjectives"><a href="#/myEdjectives">My Edjectives</a></li>
     <li class="browse"><a href="#/browse">Browse</a></li>
     <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
 	<li class="forteachers"><a href="#/forTeachers">For teachers</a></li>
