--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -7,6 +7,7 @@
   <title>Edjective</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-route.min.js"></script>
   <script src="js/controllers.js"></script>
