MyEdjectives page can now use glossary items as flashcards

--- a/src/webapp/pages/myEdjectives.html
+++ b/src/webapp/pages/myEdjectives.html
@@ -21,6 +21,10 @@
                     <ul>
                         <li data-ng-repeat="objective in class.objectives track by $index">
                             {{ objective.date }} {{ objective.name }}
+
+                            <p data-ng-show="objective.data.glossitems.length">
+                                <button data-ng-click="glossaryFlashcards(objective.data)">Use glossary items as flashcards</button>
+                            </p>
                         </li>
                     </ul>
                 </li>
