--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -21,7 +21,7 @@ class activity for your children automatically.)</p>
 
   <br />
 
-  <div data-ng-controller="LookupCtrl">
+  <div data-ng-controller="ParentsCtrl">
     <div class="classDisplay">
       <p>{{notice.text}}</p>
       <ul>
