--- a/src/webapp/pages/flashcards.html
+++ b/src/webapp/pages/flashcards.html
@@ -11,7 +11,13 @@
 
             </div>
 
-            <div class="flashcard-text">{{ flashcards[current][front_back] }}</div>
+            <div class="flashcard-text">
+                {{ flashcards.data[current][front_back] }}
+            </div>
+            <div class="flashcard-text" data-ng-show="flashcards.footer && front_back == 0">
+                <br />
+                {{ flashcards.footer }}
+            </div>
 
             <div class="flashcard-nav">
                 <button type="button" class="btn btn-default btn-lg" data-ng-click="previousFlashcard()">
