MyEdjectives shows each class and objective in its own box

--- a/src/webapp/elements/learning-objective.html
+++ b/src/webapp/elements/learning-objective.html
@@ -1,4 +1,4 @@
-<div>
+<div class="learningObjectiveBox">
     <p><span class="objectiveId">{{ learningObjective }}</span></p>
     <p><span class="objectiveDescription" data-ng-hide="suppressDescription">
         {{ data.description }}
